# conway_life_game

./: .gitignore  README.md  pyproject.toml
game/: cell.py  gameui.py  main.py  map.py
opt/: stating_cells.csv
